# PySpotSync

./: .gitignore  README.md  pyproject.toml
src/: auth.py  local_sync.py  main.py  playlist.py  txt2spotify.py
